fix horizontal scrolling from budget page transitions

--- a/style/root.css
+++ b/style/root.css
@@ -20,14 +20,25 @@
   /* stylelint-disable */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.5;
   /* stylelint-enable */
+  line-height: 1.5;
 }
 
 @media (max-width: 420px) {
   :root {
     font-size: 5vw;
   }
+}
+
+html,
+body {
+  position: relative;
+  overflow-x: hidden;
+}
+
+body {
+  background-color: var(--color-lightpink);
+  min-height: 100vh;
 }
 
 h1,
@@ -66,9 +77,4 @@ code {
 
 a {
   color: var(--color-bluegray);
-}
-
-body {
-  background-color: var(--color-lightpink);
-  min-height: 100vh;
 }
